# AgentGate

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agentgate/: __init__.py  logging_config.py
agentgate/action_mapping/: __init__.py  config_loader.py  example_config.yaml  models.py  resolver.py
agentgate/auditor/: __init__.py  agents.py  crew.py  models.py  tasks.py  tools.py
agentgate/auth/: authenticator.py
agentgate/mock_aws/: __init__.py  base.py  dynamodb.py  s3.py  ses.py
agentgate/permission_engine/: __init__.py  aws_actions.py  cache.py  evaluator.py  models.py  policy_fetcher.py  policy_parser.py
agentgate/proxy/: __init__.py  app.py  audit.py  auth.py  dependencies.py  escalation.py  models.py  routes.py  server.py
agentgate/simulator/: __init__.py  __main__.py  aws_setup.py  demo_agent.py  models.py  runner.py  scenarios.py
deploy/: aci.yaml  deploy-azure.sh
tests/: test_logging_config.py
tests/action_mapping/: test_config_loader.py  test_resolver.py
tests/auditor/: conftest.py  test_crew.py  test_tools.py
tests/mock_aws/: test_dynamodb.py  test_s3.py  test_ses.py
tests/permission_engine/: test_cache.py  test_evaluator.py  test_integration.py  test_models.py  test_policy_parser.py
tests/proxy/: conftest.py  test_audit.py  test_auth.py  test_escalation.py  test_execute_tool.py
tests/simulator/: test_scenarios.py
