# Tells pip how to build and install our package
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# Project metadata and dependencies
[project]
name = "agentgate"
version = "0.1.0"
description = "Runtime permission enforcement proxy for AI agents accessing AWS services"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "boto3>=1.34",
    "crewai>=0.30",
    "pydantic>=2.0",
]

# Dev dependencies
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "moto>=5.0",           # AWS mocking for tests
]

# Tool configs

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import ordering)
    "N",    # pep8-naming
    "UP",   # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --tb=short"

[tool.coverage.run]
source = ["agentgate"]

[tool.coverage.report]
show_missing = true
fail_under = 80
